--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ nav li a:hover {
   margin-top: 150px;
   text-align: center;
   font-size: 40px;
-  color: white;
+  color: #4caf50;
   font-weight: 400;
   font-style: normal;
   animation: fadeInName 1s ease-in-out;
@@ -142,53 +142,3 @@ nav li a:hover {
   margin-right: 5px;
   margin-left: 5px;
 }
-/* #contato {
-  margin-top: 150px;
-  background-color: #212121;
-  color: white;
-  padding: 100px 0;
-  text-align: center;
-}
-#contato h2 {
-  font-size: 48px;
-  margin-bottom: 30px;
-}
-
-#contato p {
-  font-size: 24px;
-  margin-bottom: 50px;
-}
-
-#contato form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#contato input,
-#contato textarea {
-  width: 70%;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: none;
-  background-color: #333;
-  color: white;
-}
-
-#contato input[type="submit"] {
-  cursor: pointer;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-}
-
-#contato input[type="submit"]:hover {
-  background-color: #45a049;
-} */
